--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -74,7 +74,7 @@
     {{/*<!-- FormValidation -->*/}}
     <link rel="stylesheet" href="/vendors/formvalidation/dist/css/formValidation.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
-    <script src="/vendors/formvalidation/dist/js/FormValidation.min.js"></script>
+    <script src="/vendors/formvalidation/dist/js/FormValidation.full.min.js"></script>
     <script src="/vendors/formvalidation/dist/js/plugins/Bootstrap.min.js"></script>
 
 
