--- a/views/AuthController/register.html
+++ b/views/AuthController/register.html
@@ -96,7 +96,7 @@
                             validators: {
                                 remote: {
                                     message: '{{ t .CurrentLocale "email_address_already_in_use" "" }}',
-                                    url: '/user_exists',
+                                    url: '/email_exists',
                                     type: 'POST',
                                     delay: 100,
                                 },
