--- a/views/AppController/faq.html
+++ b/views/AppController/faq.html
@@ -3,6 +3,43 @@
 {{end}}
 {{define "body"}}
 
-TODO: Put stuff here.
+<style>
+
+    .frequently-asked-question-listing {
+        padding-bottom: 10px;
+    }
+    .frequently-asked-question-question{
+        color: #6e6e6e;
+        font-style: italic;
+        font-weight: bold;
+    }
+
+    .frequently-asked-question-answer{
+        color: #a3a3a3;
+    }
+
+    .app-body {
+        overflow-y: auto;
+    }
+
+</style>
+
+<div class="container" style="padding-bottom: 25px; overflow: scroll;">
+    <h2 class="row">Frequently Asked Questions</h2>
+
+    {{range .ViewData.Faq}}
+        <div class="frequently-asked-question-listing row">
+            <div class="frequently-asked-question-text col-md-10">
+                <div class="frequently-asked-question-question">{{ .Question}}</div>
+                <div class="frequently-asked-question-answer">{{ .Answer }}</div>
+            </div>
+        </div>
+    {{end}}
+
+    {{ if eq .ViewData.FaqCount 0}}
+    <div align="center"><b>Coming Soon.</b></div>
+    {{ end }}
+
+</div>
 
 {{end}}
